Initial commit: Employee Management System with timesheet and absence tracking: Setup Angular frontend structure Setup Spring Boot backend Basic project structure and configurations User management components Authentication system setup